--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: "futura-pt", Futura, sans-serif;
+  line-height: 1.3;
+  color: #333;
 }
