--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   line-height: 1.3;
   color: #333;
 }
+
+a:link, a:visited {
+  color: #00A4DB;
+}
+
+a:hover, a:active {
+  color: #E34B5F;
+}
